test/good/classes/method08.px

func f(): Void def
    print 'f'

class A def
    func f(): Void def
        f()

A().f()
