test/bad/generators/void01.px

func f(): Void... def
    yield false

f()
